--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./public/css/styles.css">
-        <title>Learning SASS</title>
+        <title>Workshop Sass</title>
     </head>
     <body>
         <header>
-            <h1>We're learning how to use SASS</h1>
+            <h1>How to use SASS</h1>
         </header>
     
         <main>
             <section id="section-one">
-                <h3>This is section 1</h3>
+                <h3>Part 1</h3>
             </section>
             <section id="section-two">
-                <h3>This is section 2</h3>
+                <h3>Part 2</h3>
             </section>
             <section id="section-three">
-                <h3>This is section 3</h3>
+                <h3>Part 3</h3>
             </section>
-            <section id="mixin-example">This is a mixin example</section>
+            <section id="mixin-example">Mixin example</section>
         </main>
     </body>
 </html>
